Made sidebar into a sliding material design type one on mobile site. Fixed sidebar overflow/scroll bug

--- a/themes/ICTheme/static/css/main.scss
+++ b/themes/ICTheme/static/css/main.scss
@@ -61,7 +61,7 @@ p, ul {
 
 h1 {
 	font-family: Roboto, Tahoma, Arial, sans-serif; font-weight: 700;
-	font-size: 2.5rem;
+	font-size: 2rem;
 	color:	$dark-background;
 	margin: 1rem 0;
 	}
@@ -75,7 +75,7 @@ h2 {
 
 h3 {
 	font-size: 1.125rem;
-	font-weight: bold;
+	font-weight: 400;
 	color: $light-background;
 	margin: 1rem 0;
 	}
@@ -110,6 +110,10 @@ a:visited {
 
 a:hover {
 	color: $link-hover
+}
+
+pre {
+	overflow: auto;
 }
 
 /* Useful Tags */
@@ -162,7 +166,7 @@ a:hover {
 	vertical-align: top;
 }
 
-.banner-title-menu {
+.banner-title-logo {
 	display: none;
 }
 
@@ -282,12 +286,12 @@ a:hover {
 
 .sidebar-sub-item a {
 	font-family: Roboto, Tahoma, Arial, sans-serif; font-weight: 400;
-	padding: 10px 0 10px 60px;
+	padding: 10px 0 10px 35px;
 }
 
 .sidebar-sub-sub-item a {
 	font-family: Roboto, Tahoma, Arial, sans-serif; font-weight: 100;
-	padding: 10px 0 10px 60px;
+	padding: 10px 0 10px 50px;
 }
 
 .sidebar-item.no-link a:hover, .sidebar-item.no-link:hover {
@@ -444,6 +448,7 @@ a.footer-button:hover {
 
 .mainimg img {
 	max-width: 100%;
+	max-height: 600px;
 }
 
 .article-img-center {
